--- a/index.html
+++ b/index.html
@@ -200,6 +200,11 @@
         <div class="crf-footer--copyright text-primary">@Pluralsight 2018</div>
     </footer>
 </div>
+<!-- <script> -->
+    // alert('Hello World');
+    // alert('Carved Rock Fitness');
+<!-- </script> -->
+<script src="./home.js"></script>
 
 </body>
 </html>
